# buggytsproject

./: .bazelignore  .gitignore  .npmrc  BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
mypackage/: BUILD.bazel  package.json  tsconfig.json
mypackage/src/: util.ts
